--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^3.0.16",
+    "mysql2": "^3.9.3",
+    "next": "14.1.4",
+    "openai": "^4.31.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "string_decoder": "^1.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
